--- a/codebase/apps/ingest/src/CMakeLists.txt
+++ b/codebase/apps/ingest/src/CMakeLists.txt
@@ -23,6 +23,9 @@ add_subdirectory (BomSounding2Spdb)
 add_subdirectory (classIngest)
 add_subdirectory (CreateStationList)
 add_subdirectory (CsuSounding2Spdb)
+add_subdirectory (CwbAws2Spdb)
+add_subdirectory (CwbObs2Spdb)
+add_subdirectory (CwbSfc2Mdv)
 add_subdirectory (EolMobileKml2Spdb)
 add_subdirectory (EraNc2Mdv)
 add_subdirectory (GemVolXml2Dsr)
