--- a/codebase/libs/Spdb/src/FirLoc/__makefile.template
+++ b/codebase/libs/Spdb/src/FirLoc/__makefile.template
@@ -8,7 +8,7 @@
 # *=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=* 
 ###########################################################################
 #
-# Makefile for ForLoc class
+# Makefile for FirLoc class
 #
 #
 # May 2000
