Adding apps/Radx/src/RadxStats

--- a/.gitignore
+++ b/.gitignore
@@ -702,6 +702,7 @@ codebase/apps/Radx/src/RadxPrint/RadxPrint
 codebase/apps/Radx/src/RadxQpe/RadxQpe
 codebase/apps/Radx/src/RadxQc/RadxQc
 codebase/apps/Radx/src/RadxRate/RadxRate
+codebase/apps/Radx/src/RadxStats/RadxStats
 codebase/apps/Radx/src/RadxSunMon/RadxSunMon
 codebase/apps/Radx/src/RadxTest/RadxTest
 codebase/apps/Radx/src/RadxTimeMedian/RadxTimeMedian
