--- a/codebase/apps/radar/src/Makefile
+++ b/codebase/apps/radar/src/Makefile
@@ -44,6 +44,7 @@ SUB_DIRS = \
 	MdvRadarShear \
         MergeHcrAndHsrl \
 	NexradPowerStats \
+	NoiseMon \
 	PointingCpCompute \
 	PowerInfo2Spdb \
 	Qmap2Cidd \
