apps/Radx/src/RadxPersistentClutter/prototype/simplified - cleaning up

--- a/codebase/apps/Radx/src/RadxPersistentClutter/prototype/simplified/Makefile
+++ b/codebase/apps/Radx/src/RadxPersistentClutter/prototype/simplified/Makefile
@@ -53,10 +53,7 @@ HDRS = \
 
 CPPC_SRCS = \
 	Params.cc \
-	App.cc \
-	AppArgs.cc \
-	AppConfig.cc \
-	AppParams.cc \
+	Args.cc \
 	FrequencyCount.cc \
 	Info.cc \
 	Histo.cc \
