apps/Radx/RadxTimeStats - development in progress

--- a/codebase/apps/Radx/src/RadxTimeStats/Makefile
+++ b/codebase/apps/Radx/src/RadxTimeStats/Makefile
@@ -51,15 +51,15 @@ LOC_CFLAGS =
 HDRS = \
 	Params.hh \
 	Args.hh \
-	Histo.hh \
-	RadxTimeStats.hh
+	RadxTimeStats.hh \
+	Stats.hh
 
 CPPC_SRCS = \
 	Params.cc \
 	Args.cc \
-	Histo.cc \
 	Main.cc \
-	RadxTimeStats.cc
+	RadxTimeStats.cc \
+	Stats.cc
 
 #
 # tdrp macros
