--- a/codebase/apps/Radx/src/CMakeLists.txt
+++ b/codebase/apps/Radx/src/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory (RadxBufr)
 add_subdirectory (RadxCalUpdate)
 add_subdirectory (RadxCheck)
 add_subdirectory (RadxClutMon)
+add_subdirectory (RadxClutter)
 add_subdirectory (RadxConvert)
 add_subdirectory (RadxCov2Mom)
 add_subdirectory (RadxCreateVol)
@@ -40,13 +41,12 @@ add_subdirectory (RadxMesoCyclone)
 add_subdirectory (RadxModelQc)
 add_subdirectory (RadxMon)
 add_subdirectory (RadxPartRain)
-add_subdirectory (RadxPersistentClutter)
 add_subdirectory (RadxPid)
 add_subdirectory (RadxPrint)
 add_subdirectory (RadxQc)
 add_subdirectory (RadxQpe)
 add_subdirectory (RadxRate)
 add_subdirectory (RadxSunMon)
-add_subdirectory (RadxTimeMedian)
-add_subdirectory (RadxVolTimeStats)
+add_subdirectory (RadxTimeStats)
+add_subdirectory (RadxVolTimingStats)
 
