--- a/codebase/apps/Radx/src/__makefile.template
+++ b/codebase/apps/Radx/src/__makefile.template
@@ -19,6 +19,7 @@ SUB_DIRS = \
 	RadxCalUpdate \
 	RadxCheck \
 	RadxClutMon \
+	RadxClutter \
 	RadxConvert \
 	RadxCov2Mom \
 	RadxCreateVol \
@@ -35,14 +36,13 @@ SUB_DIRS = \
 	RadxModelQc \
 	RadxMon \
 	RadxPartRain \
-	RadxPersistentClutter \
 	RadxPid \
 	RadxPrint \
 	RadxQc \
 	RadxQpe \
 	RadxRate \
 	RadxSunMon \
-        RadxTimeMedian \
-        RadxVolTimeStats
+        RadxTimeStats \
+        RadxVolTimingStats
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_recursive_dir_targets
