--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory (RadarConst)
 add_subdirectory (RadarMdvCompare)
 add_subdirectory (RadxDealias)
 add_subdirectory (RapMap2Chill)
+add_subdirectory (RcalXml2Table)
 add_subdirectory (SimCpCompute)
 add_subdirectory (SpectraPrint)
 add_subdirectory (Sprite)
