--- a/codebase/apps/scripts/src/CMakeLists.txt
+++ b/codebase/apps/scripts/src/CMakeLists.txt
@@ -36,6 +36,7 @@ install(PROGRAMS rm_baks DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_CMakeLists DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_core DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_junk DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(PROGRAMS rm_latest_data_info_files DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_ldata_fmq_files DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_makefile DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 install(PROGRAMS rm_makefile.am DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
