build/cmake - in libs, check for Qt dependency and add macros to CMakeLists accordingly

--- a/codebase/libs/qtplot/src/CMakeLists.txt
+++ b/codebase/libs/qtplot/src/CMakeLists.txt
@@ -11,6 +11,20 @@
 
 project (libqtplot)
 
+# QT5
+
+set (CMAKE_INCLUDE_CURRENT_DIR ON)
+set (CMAKE_AUTOMOC ON)
+set (CMAKE_AUTORCC ON)
+set (CMAKE_AUTOUIC ON)
+find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
+
+pkg_search_module(Qt5Core REQUIRED)
+pkg_search_module(Qt5Gui REQUIRED)
+pkg_search_module(Qt5Widgets REQUIRED)
+pkg_search_module(Qt5Network REQUIRED)
+pkg_search_module(Qt5Qml REQUIRED)
+
 # include directories
 
 include_directories (./include)
@@ -61,6 +75,12 @@ endif()
 if(IS_DIRECTORY /usr/local/include)
   include_directories (/usr/local/include)
 endif()
+
+include_directories(${Qt5Core_INCLUDE_DIRS})
+include_directories(${Qt5Gui_INCLUDE_DIRS})
+include_directories(${Qt5Widgets_INCLUDE_DIRS})
+include_directories(${Qt5Network_INCLUDE_DIRS})
+include_directories(${Qt5Qml_INCLUDE_DIRS})
 
 # source files
 
