--- a/codebase/apps/mm5/src/MM5Simulate/Makefile
+++ b/codebase/apps/mm5/src/MM5Simulate/Makefile
@@ -39,9 +39,12 @@ LOC_INCLUDES =
 LOC_CFLAGS =
 LOC_LDFLAGS =
 LOC_LIBS = \
-	-lmm5 -lrapformats -ldsserver -ldidss \
-	-lphysics -ltoolsa -lpthread -ldataport -ltdrp \
-	-lbz2 -lz -lm
+	-lmm5 -lMdv -lSpdb \
+	-lFmq -lrapformats -ldsserver -ldidss \
+	-leuclid -lrapmath -ltoolsa -ldataport \
+	-ltdrp -lRadx -lNcxx -lphysics \
+	$(NETCDF4_LIBS) -lbz2 \
+	-lz -lpthread
 
 HDRS = \
 	Params.hh \
