--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory (DsrMerge)
 add_subdirectory (DualDopplerLobes)
 add_subdirectory (Ecco)
 add_subdirectory (HawkEye)
+add_subdirectory (HawkEdit)
 add_subdirectory (HcrTempRxGain)
 add_subdirectory (HcrVelCorrect)
 add_subdirectory (Hsrl2Radx)
